test/tests/operators/from_unix_socket/validation_error_pipeline_not_events.txt
error: pipeline must return events
 --> tests/operators/from_unix_socket/validation_error_pipeline_not_events.tql:5:55
  |
5 | from_unix_socket env("TENZIR_TMP_DIR") + "/test.sock" {
  |                                                       ^ 
  |
